--- a/.github/workflow/deployment2.yml
+++ b/.github/workflow/deployment2.yml
@@ -6,6 +6,10 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: Install NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Install dependencies
         run: npm ci
       - name: Lint
@@ -15,6 +19,10 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: Install NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Install dependencies
         run: npm ci
       - name: Test code
@@ -24,6 +32,10 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
+      - name: Install NodeJS
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
       - name: Install dependencies
         run: npm ci
       - name: Build code
