--- a/.github/workflows/deployment2.yml
+++ b/.github/workflows/deployment2.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Lint
         run: npm run Lint
   test:
@@ -17,7 +17,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Test code
         run: npm run test
   deploy:
@@ -27,7 +27,7 @@ jobs:
       - name: Get code
         uses: actions/checkout@v3
       - name: Install dependencies
-        run: npm ci
+        run: npm install
       - name: Build code
         run: npm run build
       - name: Deploy code
