--- a/.github/workflows/deployment1.yml
+++ b/.github/workflows/deployment1.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Lint
-        run: npm run Lint
+        run: npm run lint
       - name: Test code
         run: npm run test
       - name: Build code
