--- a/.github/workflows/deployment2.yml
+++ b/.github/workflows/deployment2.yml
@@ -9,7 +9,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Lint
-        run: npm run Lint
+        run: npm run lint
   test:
     needs: lint
     runs-on: ubuntu-latest
